@@ -33,19 +33,31 @@ has 'angle' => (
     required => 1
 );
 
-has 'color' => (
+has 'color1' => (
     is => 'rw',
     isa => 'Google::Chart::Color::Data',
     required => 1
 );
 
-has 'offset' => (
+has 'color2' => (
+    is => 'rw',
+    isa => 'Google::Chart::Color::Data',
+    required => 1
+);
+
+has 'offset1' => (
     is => 'rw',
     isa => 'Google::Chart::Fill::LinearGradient::Offset',
     default => 0,
     required => 1,
 );
 
+has 'offset2' => (
+    is => 'rw',
+    isa => 'Google::Chart::Fill::LinearGradient::Offset',
+    default => 0,
+    required => 1,
+);
 
 __PACKAGE__->meta->make_immutable;
 
@@ -54,7 +66,7 @@ no Moose::Util::TypeConstraints;
 
 sub parameter_value {
     my $self = shift;
-    return join(",", $self->target, 'lg', $self->angle, $self->color, $self->offset);
+    return join(",", $self->target, 'lg', $self->angle, $self->color1, $self->offset1, $self->color2, $self->offset2);
 }
 
 1;
